# surgitouch

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  manifest.xml  package.xml  platformio.ini  setup.py
firmware/: .gitignore  Atmega32u4Hardware.h  CMakeLists.txt  Descriptors.c  Descriptors.h  Makefile  README.md  platformio.ini  roboclaw.cpp  roboclaw.h  ros.h  surgitouch.cpp  surgitouch.h  time.c  time.h  uart.c.old  uart.h.old
nodes/: sketch  visualiser  visualiser.py
src/: figure_eight.py  force_feedback_example.py  visualiser.py
src/surgitouch/: feedback.py  windows.py  zone.py
